; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/system/himem/main/extr_himem_example_main.c_check_mem_seed.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/system/himem/main/extr_himem_example_main.c_check_mem_seed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [47 x i8] c"check_mem_seed: %x has 0x%08x expected 0x%08x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, i32, i32)* @check_mem_seed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_mem_seed(i32 %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i64, align 8
  store i32 %0, i32* %6, align 4
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %14 = load i8*, i8** %7, align 8
  %15 = bitcast i8* %14 to i64*
  store i64* %15, i64** %10, align 8
  %16 = load i32, i32* %6, align 4
  %17 = xor i32 %16, -1515870811
  store i32 %17, i32* %11, align 4
  store i32 0, i32* %12, align 4
  br label %18

18:                                               ; preds = %47, %4
  %19 = load i32, i32* %12, align 4
  %20 = load i32, i32* %8, align 4
  %21 = sdiv i32 %20, 4
  %22 = icmp slt i32 %19, %21
  br i1 %22, label %23, label %50

23:                                               ; preds = %18
  %24 = call i64 @rand_r(i32* %11)
  store i64 %24, i64* %13, align 8
  %25 = load i64, i64* %13, align 8
  %26 = load i64*, i64** %10, align 8
  %27 = load i64, i64* %26, align 8
  %28 = icmp ne i64 %25, %27
  br i1 %28, label %29, label %44

29:                                               ; preds = %23
  %30 = load i32, i32* %9, align 4
  %31 = sext i32 %30 to i64
  %32 = load i64*, i64** %10, align 8
  %33 = bitcast i64* %32 to i8*
  %34 = load i8*, i8** %7, align 8
  %35 = ptrtoint i8* %33 to i64
  %36 = ptrtoint i8* %34 to i64
  %37 = sub i64 %35, %36
  %38 = add nsw i64 %31, %37
  %39 = trunc i64 %38 to i32
  %40 = load i64*, i64** %10, align 8
  %41 = load i64, i64* %40, align 8
  %42 = load i64, i64* %13, align 8
  %43 = call i32 @printf(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0), i32 %39, i64 %41, i64 %42)
  store i32 0, i32* %5, align 4
  br label %51

44:                                               ; preds = %23
  %45 = load i64*, i64** %10, align 8
  %46 = getelementptr inbounds i64, i64* %45, i32 1
  store i64* %46, i64** %10, align 8
  br label %47

47:                                               ; preds = %44
  %48 = load i32, i32* %12, align 4
  %49 = add nsw i32 %48, 1
  store i32 %49, i32* %12, align 4
  br label %18

50:                                               ; preds = %18
  store i32 1, i32* %5, align 4
  br label %51

51:                                               ; preds = %50, %29
  %52 = load i32, i32* %5, align 4
  ret i32 %52
}

declare dso_local i64 @rand_r(i32*) #1

declare dso_local i32 @printf(i8*, i32, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
